# mix-marriage-offline

./: .gitattributes  .gitignore  .markdownlintignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  Makefile  PROJECT_WHEN_COMPLETE.md  README.md  SECURITY.md  out.json  parallel_pytest.patch  pyproject.toml  pytest.ini  requirements.txt
.claude/agents/: mmo-contracts-guardian.md  mmo-core-coder.md  mmo-docs-editor.md  mmo-planner.md  mmo-reviewer.md  mmo-test-engineer.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  policy-validation.yml  release.yml
benchmarks/: README.md  suite.py
docs/: 00-proposal.md  00-quickstart.md  01-philosophy.md  02-architecture.md  03-ontology.md  04-plugin-api.md  05-fixtures-and-ci.md  06-roadmap.md  07-export-guides.md  08-policy-validation.md  09-product-vision.md  10-authority-profiles.md  11-gui-vision.md  12-gui-design-system.md  12-gui-dev.md  13-gui-handshake.md  13-plugin-authoring.md  14-scene-templates.md  15-target-selection.md  16-audio-quality-mandates.md  16-translation-checks.md  17-metadata-and-tags.md  17-stem-discovery.md  18-channel-standards.md  18-corpus-scanning.md  19-stems-drafts.md  20-stems-audition.md  21-loudness-profiles.md  MMO_CHAOS_TEST_PLAN.md  PROJECT_INSTRUCTIONS.md  README.md  SCENE_AND_RENDER_CONTRACT_OVERVIEW.md  STATUS.md  agent_repl_harness.md  announcement_templates.md  gui_parity.md  milestones.yaml  semantic_contracts.md  user_guide.md
docs/architecture/: coverage-ledger.md  repo-slices.md  system-map.md
docs/claude_agents/: mmo-contracts-guardian.md  mmo-core-coder.md  mmo-docs-editor.md  mmo-planner.md  mmo-reviewer.md  mmo-test-engineer.md
docs/contributing/: ai-workflow.md
docs/manual/: 00-manual-overview.md  (+16 more)
fixtures/: README.md  expected_bus_plan.json  expected_scene.json
gui/: dashboard.py  main.py  package-lock.json  package.json  server.mjs
gui/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
gui/desktop-tauri/src-tauri/capabilities/: default.json
gui/desktop-tauri/src-tauri/src/: lib.rs  main.rs
ontology/: README.md  actions.yaml  downmix.yaml  evidence.yaml  features.yaml  gates.yaml  gui_design.yaml  help.yaml  intent_params.yaml  issues.yaml  layouts.yaml  lfe_derivation_profiles.yaml  ontology.yaml  params.yaml  plugin_index.yaml  plugin_semantics.yaml  reasons.yaml  render_targets.yaml  role_lexicon_common.yaml  roles.yaml  scene_locks.yaml  scene_templates.yaml  speaker_positions.yaml  speakers.yaml  translation_profiles.yaml  ui_copy.yaml  units.yaml
presets/: index.json  safe_cleanup.json
schemas/: apply_manifest.schema.json  bus_plan.schema.json  deliverables_index.schema.json  downmix.schema.json  event.schema.json  gates_policies.schema.json  gui_design.schema.json  gui_state.schema.json  intent_params.schema.json  layouts.schema.json  lfe_derivation_profiles.schema.json  listen_pack.schema.json  lockfile.schema.json  plugin.schema.json  preflight_receipt.schema.json  presets_index.schema.json  project.schema.json  render_manifest.schema.json  render_plan.schema.json  render_preflight.schema.json  render_qa.schema.json  render_report.schema.json  render_request.schema.json  render_targets.schema.json  report.schema.json  roles.schema.json  run_config.schema.json  safe_render_receipt.schema.json  scene.schema.json  scene_locks.schema.json  scene_templates.schema.json  speaker_positions.schema.json  statuses.schema.json  stems_index.schema.json  stems_map.schema.json  timeline.schema.json  translation_profiles.schema.json  ui_bundle.schema.json  ui_hints.schema.json  ui_layout.schema.json  (+5 more)
site/: index.html  styles.css
tests/: conftest.py  test_32ch_end_to_end.py  test_agent_harness.py  test_analysis_cache.py  test_analyze_stems_keep_scan.py  test_analyze_stems_truth_passthrough.py  test_audio_buffer.py  test_audio_decoder_abstraction.py  test_authority_gates.py  test_benchmarks_suite.py  test_blocked_render_diagnostics.py  test_cli_apply.py  test_cli_bundle_pointers.py  test_cli_compare.py  test_cli_downmix_list.py  test_cli_downmix_render.py  test_cli_downmix_show.py  test_cli_env_doctor.py  test_cli_error_output_determinism.py  test_cli_event_log_validate.py  test_cli_gates.py  test_cli_golden_path_determinism.py  test_cli_gui_rpc.py  test_cli_immersive_golden_path_small.py  test_cli_locks.py  test_cli_plugin_market.py  test_cli_plugins_list.py  test_cli_plugins_self_test.py  test_cli_plugins_show.py  test_cli_plugins_starter_pack_smoke.py  test_cli_plugins_ui_lint.py  test_cli_plugins_validate.py  test_cli_preset_preview.py  test_cli_presets.py  test_cli_project_build_gui.py  test_cli_project_bundle.py  test_cli_project_init.py  test_cli_project_load_save.py  test_cli_project_pack.py  test_cli_project_refresh.py  (+247 more)
tools/: __init__.py  analyze_stems.py  benchmark_render_precision.py  build_binaries.py  build_installers.py  build_user_manual.py  capture_gui_screenshots.py  capture_tauri_screenshots.py  check_screenshot_diff.py  downmix_qa.py  export_report.py  gen_downmix_inventory_fixtures.py  generate_lfe_corrective_fixtures.py  make_demo_stems.py  prepare_tauri_sidecar.py  regen_plugin_chain_baseline.py  render_gain_trim.py  run_fixtures.py  run_pipeline.py  run_policy_fixtures.py  run_pytest.cmd  run_pytest.ps1  run_pytest.sh  run_renderers.py  run_session_fixtures.py  safe_cleanup.py  scan_session.py  screenshot_baselines.py  show_downmix_matrix.py  smoke_packaged_desktop.py  stem_corpus_diff.py  stem_corpus_scan.py  sync_claude_agents.py  sync_packaged_data_mirror.py  validate.py  validate_contracts.py  validate_gui_parity.py  validate_maintenance_harness.py  validate_milestones.py  validate_msi_version.py  (+10 more)
(+599 files in other folders)
