[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mix-marriage-offline"
description = "Offline mixing assistant for stem analysis."
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
  "PyYAML",
  "jsonschema",
]

[project.optional-dependencies]
pdf = ["reportlab>=4"]
truth = ["numpy>=1.26"]
dev = ["pytest>=7.0"]

[project.scripts]
mmo = "mmo.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mmo.data" = ["**/*.json", "**/*.yaml", "**/*.md"]

[tool.setuptools.dynamic]
version = {attr = "mmo.__version__"}
