[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mix-marriage-offline"
description = "Offline, deterministic stem-folder mixing assistant with multi-standard surround support."
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]
license = {text = "Apache-2.0"}
keywords = [
  "audio",
  "mixing",
  "stems",
  "surround",
  "immersive",
  "offline",
  "deterministic",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
  "Topic :: Multimedia :: Sound/Audio :: Mixers",
  "Topic :: Utilities",
]
dependencies = [
  "PyYAML",
  "jsonschema",
  "numpy>=2.0",
]

[project.optional-dependencies]
pdf = ["reportlab>=4"]
truth = []
screenshots = ["mss>=9", "Pillow>=10", "numpy>=2.0"]
watch = ["watchdog>=4.0"]
dev = ["pytest>=7.0", "pytest-xdist>=3.6.1"]

[project.scripts]
mmo = "mmo.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mmo.data" = ["**/*.json", "**/*.yaml", "**/*.md", "**/*.py"]

[tool.setuptools.dynamic]
version = {attr = "mmo.__version__"}
