[package]
name = "mmo-desktop-tauri"
version = "0.1.0"
description = "Mix Marriage Offline desktop app scaffold"
authors = ["MMO contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mmo_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[patch.crates-io]
# Tauri's current Linux GTK stack resolves through glib 0.18.x. Vendor the
# one-line upstream fix for GHSA-wrw7-89jp-8q8g until the wider stack can move
# to a non-vulnerable published release train.
glib = { path = "vendor/glib-0.18.5" }
