[package]
name = "mmo-desktop-tauri"
version = "0.1.0"
description = "Mix Marriage Offline desktop app scaffold"
authors = ["MMO contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mmo_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[patch.crates-io]
# Tauri 2.10.3's published Linux GTK stack still resolves gtk 0.18.2 ->
# glib 0.18.5, and the published gtk-rs 0.18 line stops there today.
# Keep this override only long enough to carry the GHSA-wrw7-89jp-8q8g fix plus
# Rust 1.94 warning-clean backports without pinning older Rust or suppressing
# warnings globally. Exit path: delete this override once published
# Tauri/Wry/WebKitGTK crates resolve to a published glib newer than 0.18.5.
# See vendor/glib-0.18.5/MMO_VENDOR_NOTES.md for the exact base + backports.
glib = { path = "vendor/glib-0.18.5" }
